Self/mydevorg/Unpackaged/Config/objects/Koach_Content_Params__c.object
<CustomObject>
    <fields>
        <fullName>ContentParamIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>ContentParamIdentifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Koach_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Koach Brand</label>
        <referenceTo>Koach_Brand__c</referenceTo>
        <relationshipLabel>Koach Content Params</relationshipLabel>
        <relationshipName>Koach_Content_Params</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Koach_Call_Focus__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Koach Call Focus</label>
        <referenceTo>Koach_Call_Focus__c</referenceTo>
        <relationshipLabel>Koach Content Params</relationshipLabel>
        <relationshipName>Koach_Content_Params</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Koach_Segmentation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Koach Segmentation</label>
        <referenceTo>Koach_Segmentation__c</referenceTo>
        <relationshipLabel>Koach Content Params</relationshipLabel>
        <relationshipName>Koach_Content_Params</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Koach Content Params</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Param-{0000}</displayFormat>
        <label>Koach Content Determiner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Koach Content Params</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>